TFP-5621: Flytter kontrakt til fp-kontrakter + forenkling av fpsak testene